--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <a href="index.html" class="flex items-center gap-2 px-3 py-2 rounded-lg transition-smooth bg-accent-light text-accent-blue font-medium" aria-current="page">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M22 12h-4l-3 9L9 3l-3 9H2"/></svg> Home
             </a>
-            <a href="#" onclick="alert('Navigating to Dashboard...')"
+            <a href="dashboard.html" onclick="alert('Navigating to Dashboard...')"
                class="flex items-center gap-2 px-3 py-2 rounded-lg transition-smooth hover:text-gray-900 hover:bg-gray-100">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><rect width="7" height="9" x="3" y="3" rx="1"/><rect width="7" height="5" x="14" y="3" rx="1"/><rect width="7" height="9" x="14" y="12" rx="1"/><rect width="7" height="5" x="3" y="16" rx="1"/></svg> Dashboard
             </a>
