--- a/medicines.html
+++ b/medicines.html
@@ -86,11 +86,11 @@
             <a href="index.html" class="flex items-center gap-2 px-3 py-2 rounded-lg transition-smooth hover:text-gray-900 hover:bg-gray-100">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M22 12h-4l-3 9L9 3l-3 9H2"/></svg> Home
             </a>
-            <a href="#" onclick="alert('Navigating to Dashboard...')"
+            <a href="dashboard.html" onclick="alert('Navigating to Dashboard...')"
                class="flex items-center gap-2 px-3 py-2 rounded-lg transition-smooth hover:text-gray-900 hover:bg-gray-100">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><rect width="7" height="9" x="3" y="3" rx="1"/><rect width="7" height="5" x="14" y="3" rx="1"/><rect width="7" height="9" x="14" y="12" rx="1"/><rect width="7" height="5" x="3" y="16" rx="1"/></svg> Dashboard
             </a>
-            <a href="#" onclick="alert('Navigating to Lab Reports...')"
+            <a href="lab-reports.html" onclick="alert('Navigating to Lab Reports...')"
                class="flex items-center gap-2 px-3 py-2 rounded-lg transition-smooth hover:text-gray-900 hover:bg-gray-100">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"/><path d="M14 2v4a2 2 0 0 0 2 2h4"/><path d="M10 9H8"/><path d="M16 13H8"/><path d="M16 17H8"/></svg> Lab Reports
             </a>
